start adding images

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -118,3 +118,27 @@
   :line4: "from another player."
   :line5: "<i>Hidden Cache</i> — Passive"
   :line6: "+2 max hand size"
+-
+  :deck: "Artifact"
+  :title: "Dragon Egg"
+  :type: "Artifact"
+  :image: "dragon_egg"
+  :border_color: "#ffc000"
+  :line1: "<i>Hatch</i> — 6 Charges"
+  :line2: "Flip this card over."
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "Artifact"
+  :title: "Rainbow Dragon"
+  :type: "Artifact"
+  :image: "rainbow_dragon"
+  :border_color: "#ffc000"
+  :line1: "<i>Companion</i> — Passive"
+  :line2: "You may draw an additional"
+  :line3: "card during your <i>Draw Step</i>."
+  :line4: "<i>Refract</i> — 2 Charges"
+  :line5: "<b>Block 2</b> (if applicable)"
+  :line6: "Target enemy suffers 2 damage."
