--- a/data/tairos/enemies.yml
+++ b/data/tairos/enemies.yml
@@ -3,11 +3,12 @@
   :deck: "Enemy"
   :title: "Toxic Toad"
   :type: "Enemy"
+  :player_count: 2
   :icon: "toad-teeth"
   :border_color: "#444"
   :hp: "12"
   :attack: "3"
-  :line1: "<b>Engage</b>: <b>Mill 2</b>"
+  :line1: "<b>Engage</b>: <b>Discard 1</b>"
   :line2: "<b>On Defeat</b>: The engaged"
   :line3: "player must <b>Discard 2</b>"
   :line4: "or suffer 4 damage."
@@ -15,6 +16,7 @@
   :deck: "Enemy"
   :title: "Harpy"
   :type: "Enemy"
+  :player_count: 2
   :icon: "harpy"
   :border_color: "#444"
   :hp: "12"
@@ -27,6 +29,7 @@
   :deck: "Enemy"
   :title: "Razor Knight"
   :type: "Enemy"
+  :player_count: 2
   :icon: "brutal-helm"
   :border_color: "#444"
   :hp: "14"
@@ -39,21 +42,23 @@
   :deck: "Enemy"
   :title: "Pyromancer"
   :type: "Enemy"
+  :player_count: 2
   :icon: "ifrit"
   :border_color: "#444"
   :hp: "12"
   :attack: "3"
   :line1: "<b>Encounter</b>: ALL players suffer"
   :line2: "1 damage."
-  :line3: "<b>Hunter</b>: Most <b>Health</b>"
-  :line4: "Ignores <b>Block</b> when attacking."
+  :line3: "Ignores <b>Block</b> when attacking."
+  :line4: ""
 -
   :deck: "Enemy"
   :title: "Mana Wraith"
   :type: "Enemy"
+  :player_count: 2
   :icon: "spectre"
   :border_color: "#444"
-  :hp: "14"
+  :hp: "12"
   :attack: "4"
   :line1: "<b>Encounter</b>: ALL players <b>Mill 2</b>"
   :line2: "<b>Hunter</b>: Most cards in hand"
@@ -63,18 +68,20 @@
   :deck: "Enemy"
   :title: "Serpent Assassin"
   :type: "Enemy"
+  :player_count: 3
   :icon: "horned-reptile"
   :border_color: "#444"
   :hp: "10"
-  :attack: "5"
-  :line1: "<b>Hunter</b>: Least <b>Health</b>"
+  :attack: "4"
+  :line1: "<b>Hunter</b>: Least <b>HP</b>"
   :line2: "While <i>Serpent Assassin</i> is alive,"
-  :line3: "the player engaged with it"
+  :line3: "any player engaged with it"
   :line4: "cannot play cards from hand."
 -
   :deck: "Enemy"
   :title: "Noxious Beast"
   :type: "Enemy"
+  :player_count: 2
   :icon: "gooey-daemon"
   :border_color: "#444"
   :hp: "14"
@@ -87,21 +94,23 @@
   :deck: "Enemy"
   :title: "Ice Golem"
   :type: "Enemy"
+  :player_count: 3
   :icon: "ice-golem"
   :border_color: "#444"
-  :hp: "18"
+  :hp: "14"
   :attack: "3"
   :line1: "<b>Hunter</b>: Least cards in hand"
   :line2: "While <i>Ice Golem</i> is alive,"
-  :line3: "the player engaged with it"
+  :line3: "any player engaged with it"
   :line4: "cannot draw cards."
 -
   :deck: "Enemy"
   :title: "Black Guard"
   :type: "Enemy"
+  :player_count: 4
   :icon: "black-knight-helm"
   :border_color: "#444"
-  :hp: "12"
+  :hp: "10"
   :attack: "2"
   :line1: "<b>Block 3</b>"
   :line2: "Other enemies cannot be"
@@ -111,6 +120,7 @@
   :deck: "Enemy"
   :title: "Flamespitter"
   :type: "Enemy"
+  :player_count: 3
   :icon: "spark-spirit"
   :border_color: "#444"
   :hp: "12"
@@ -123,19 +133,22 @@
   :deck: "Enemy"
   :title: "Voidling"
   :type: "Enemy"
+  :player_count: 2
   :icon: "infested-mass"
   :border_color: "#444"
   :hp: "10"
   :attack: "4"
   :line1: "Can only be damaged by the"
-  :line2: "player it's engaged with."
+  :line2: "player who's engaged with it."
   :line3: "<b>On Defeat</b>: The engaged"
   :line4: "player must <b>Mill 5</b>."
+
 # Elite Enemies
 -
   :deck: "Enemy"
   :title: "Fire Drake"
   :type: "Elite Enemy"
+  :player_count: 3
   :icon: "wyvern"
   :border_color: "#444"
   :hp: "20"
@@ -148,35 +161,121 @@
   :deck: "Enemy"
   :title: "Soul Reaper"
   :type: "Elite Enemy"
+  :player_count: 2
   :icon: "grim-reaper"
   :border_color: "#444"
   :hp: "20"
   :attack: "5"
-  :line1: "<b>Hunter</b>: Least <b>Health</b>"
+  :line1: "<b>Hunter</b>: Least <b>HP</b>"
   :line2: "After <i>Soul Reaper</i> attacks,"
-  :line3: "it gains <b>Health</b> equal to"
+  :line3: "it gains <b>HP</b> equal to"
   :line4: "the damage it dealt."
 -
   :deck: "Enemy"
   :title: "Oni Warlord"
   :type: "Elite Enemy"
+  :player_count: 4
   :icon: "oni"
   :border_color: "#444"
   :hp: "20"
-  :attack: "4"
-  :line1: "ALL enemy attacks gain"
-  :line2: "<b>+2 Attack</b>."
-  :line3: "When <i>Warlord</i> is attacked,"
+  :attack: "3"
+  :line1: "All attacks from <i>non-Elite</i>"
+  :line2: "enemies gain <b>+2 Power</b>."
+  :line3: "When <i>Oni Warlord</i> is attacked,"
   :line4: "the attacker suffers 1 damage."
 -
   :deck: "Enemy"
   :title: "Armored Bear"
   :type: "Elite Enemy"
+  :player_count: 2
   :icon: "bear-head"
   :border_color: "#444"
   :hp: "20"
   :attack: "4"
   :line1: "<b>Block 2</b>"
-  :line2: "Immune to player card effects."
-  :line3: "After <i>Armored Bear</i> attacks,"
-  :line4: "the target must <b>Discard 1</b>."
+  :line2: "After <i>Armored Bear</i> attacks,"
+  :line3: "the target must <b>Discard 1</b>."
+  :line4: ""
+
+
+
+# NEW ENEMIES
+-
+  :deck: "Enemy"
+  :title: "Hydra"
+  :type: "Elite Enemy"
+  :player_count: 4
+  :icon: "hydra"
+  :border_color: "#444"
+  :hp: "18"
+  :attack: "4"
+  :line1: "<b>Hunter</b>: Most <b>HP</b>"
+  :line2: "<b>Round End</b>: <i>Hydra</i> performs"
+  :line3: "<b>Restore Self 18</b>."
+  :line4: ""
+-
+  :deck: "Enemy"
+  :title: "Sea Drake"
+  :type: "Elite Enemy"
+  :player_count: 3
+  :icon: "sea-dragon"
+  :border_color: "#444"
+  :hp: "20"
+  :attack: "4"
+  :line1: "<b>Block 1</b>"
+  :line2: "After <i>Sea Drake</i> attacks,"
+  :line3: "ALL players pass their hands to"
+  :line4: "the player on their left."
+
+-
+  :deck: "Enemy"
+  :title: "Scrambler"
+  :type: "Enemy"
+  :player_count: 2
+  :icon: "floating-tentacles"
+  :border_color: "#444"
+  :hp: "14"
+  :attack: "3"
+  :line1: "<b>Round End</b>: ALL players"
+  :line2: "<b>Discard</b> their hands, then"
+  :line3: "<b>Draw</b> the same number"
+  :line4: "of cards."
+-
+  :deck: "Enemy"
+  :title: "Insectoid"
+  :type: "Enemy"
+  :player_count: 2
+  :icon: "alien-bug"
+  :border_color: "#444"
+  :hp: "14"
+  :attack: "3"
+  :line1: "While <i>Insectoid</i> is alive,"
+  :line2: "when any player performs a"
+  :line3: "<b>Combo</b>, they suffer 2 damage."
+  :line4: ""
+-
+  :deck: "Enemy"
+  :title: "Bat Drake"
+  :type: "Enemy"
+  :player_count: 3
+  :icon: "evil-bat"
+  :border_color: "#444"
+  :hp: "12"
+  :attack: "2"
+  :line1: "Immune to player card effects."
+  :line2: "<b>Round End</b>: Engaged player"
+  :line3: "suffers 2 damage and <i>Bat Drake</i>"
+  :line4: "performs <b>Restore Self 2</b>."
+-
+  :deck: "Enemy"
+  :title: "Animated Armor"
+  :type: "Enemy"
+  :player_count: 2
+  :icon: "battle-gear"
+  :border_color: "#444"
+  :hp: "10"
+  :attack: "3"
+  :line1: "<b>Block 3</b>"
+  :line2: "<b>Hunter</b>: Most <b>Charges</b>"
+  :line3: "<b>Round End</b>: The engaged"
+  :line4: "player loses one <b>Charge</b>."
