--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -17,7 +17,7 @@
   :deck: "Guardian"
   :title: "Defend"
   :type: "Reaction"
-  :icon: "checked-shield"
+  :image: "shield_regal"
   :border_color: "#9c2317"
   :line1: "Play when an enemy attacks."
   :line2: "<b>Block 2</b>"
@@ -36,14 +36,14 @@
   :line3: "you can't attack next round."
   :line4: "<b>Combo</b>: <i>Polish</i>"
   :line5: "<b>Scry 3</b>"
-  :line6: ""
+  :line6: "<b>Draw 1</b>"
 
 # Bowmaster - BLACK
 -
   :deck: "Bowmaster"
   :title: "Shoot"
   :type: "Action"
-  :icon: "high-shot"
+  :image: "bow"
   :border_color: "#666"
   :line1: "<b>Attack 3</b>"
   :line2: "If you've taken no damage"
@@ -81,7 +81,7 @@
   :deck: "Arcanist"
   :title: "Blast"
   :type: "Action"
-  :icon: "hypersonic-bolt"
+  :image: "blast_blue"
   :border_color: "#2e65b3"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target has <b>Block</b>,"
@@ -153,7 +153,7 @@
   :line6: "<b>+2 Power</b>."
 
 
-## SPECIALISTS PACK
+## SPECIALIST PACK
 
 # Juggernaut - RED
 -
@@ -193,43 +193,43 @@
   :line5: "You may shuffle two of your"
   :line6: "discarded cards into their deck."
 
-# Assassin - BLACK
+# Skirmisher - BLACK
 -
-  :deck: "Assassin"
-  :title: "Pierce"
+  :deck: "Skirmisher"
+  :title: "Fling"
   :type: "Action"
   :icon: "flying-dagger"
   :border_color: "#666"
-  :line1: "<b>Attack 1</b>"
+  :line1: "<b>Attack 2</b>"
   :line2: "<b>Draw 1</b>"
   :line3: "You may take another <b>Action</b>."
-  :line4: "<b>Combo</b>: <i>Rend</i>"
-  :line5: "All attacks against this enemy"
-  :line6: "this round gain <b>+2 Power</b>."
+  :line4: "<b>Combo</b>: <i>Reload</i>"
+  :line5: "<b>Refresh</b> your <i>Skirmisher</i> deck."
+  :line6: "<b>Draw 2</b> <i>Skirmisher</i> cards."
 -
-  :deck: "Assassin"
-  :title: "Venomize"
-  :type: "Reaction"
-  :icon: "dripping-blade"
+  :deck: "Skirmisher"
+  :title: "Flourish"
+  :type: "Action"
+  :icon: "spinning-blades"
   :border_color: "#666"
-  :line1: "Play when you attack."
-  :line2: "This attack gains <b>+2 Power</b>"
-  :line3: "and ignores <b>Block</b>."
-  :line4: "<b>Combo</b>: <i>Splash</i>"
-  :line5: "Target enemy suffers 3 damage."
-  :line6: "(target a different enemy)"
+  :line1: "<b>Attack 3</b>"
+  :line2: "You may <b>Discard</b> to "
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
 -
-  :deck: "Assassin"
+  :deck: "Skirmisher"
   :title: "Reposition"
   :type: "Reaction"
   :icon: "jump-across"
   :border_color: "#666"
-  :line1: "Play when you engage"
-  :line2: "an enemy."
-  :line3: "<b>Draw 2</b>"
-  :line4: "<b>Combo</b>: <i>Trip</i>"
-  :line5: "That enemy can't attack"
-  :line6: "this round."
+  :line1: "Play when you are attacked."
+  :line2: "Swap places with an ally."
+  :line3: "They gain <b>Block 2</b>."
+  :line4: "You each <b>Draw 1</b>."
+  :line5: "<b>Combo</b>: <i>Trip</i>"
+  :line6: "Prevent the attack."
 
 # Illusionist - BLUE
 -
@@ -254,7 +254,7 @@
   :line2: "Your attacker targets an ally"
   :line3: "instead. That ally gains <b>Block 2</b>."
   :line4: "<b>Combo</b>: <i>Confuse</i>"
-  :line5: "If not <b>Elite</b>, your attacker"
+  :line5: "If attacker is not <i>Elite</i>, it"
   :line6: "targets another enemy instead."
 -
   :deck: "Illusionist"
@@ -277,11 +277,11 @@
   :icon: "ages"
   :border_color: "#492"
   :line1: "Play when an ally is attacked."
-  :line2: "You may become the target."
-  :line3: "<b>Block 1</b>, <b>Attack 1</b>, and <b>Draw 1</b>"
+  :line2: "<b>Block 2</b>"
+  :line3: "<b>Attack 2</b>"
   :line4: "(target the attacking enemy)"
-  :line5: "<b>Combo</b>: <i>Intervene</i>"
-  :line6: "<b>+2 Block</b> and <b>+2 Power</b>"
+  :line5: "You may become the target."
+  :line6: "If you do, <b>+2 Power</b>"
 -
   :deck: "Squire"
   :title: "Recover"
@@ -304,8 +304,8 @@
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
   :line4: "<b>Combo</b>: <i>Gather</i>"
-  :line5: "Target ally may <b>Refresh</b>"
-  :line6: "one of their decks."
+  :line5: "You and target ally may"
+  :line6: "<b>Refresh</b>."
 
 
 ## MEAN STREETS PACK
@@ -317,23 +317,23 @@
   :type: "Action"
   :icon: "charging-bull"
   :border_color: "#9c2317"
-  :line1: "<b>Attack 5</b>"
-  :line2: "You suffer 1 damage."
-  :line3: "<b>Combo</b>: <i>Takedown</i>"
-  :line4: "Gain <b>+X Power</b> where <i>X</i> is the"
-  :line5: "amount of damage you've taken"
-  :line6: "this round."
+  :line1: "<b>Attack 3</b>"
+  :line2: "You may suffer 1 damage to"
+  :line3: "gain <b>+3 Power</b>."
+  :line4: "<b>Combo</b>: <i>Takedown</i>"
+  :line5: "Gain <b>+X Power</b> where <i>X</i> is the"
+  :line6: "damage you suffered this round."
 -
   :deck: "Brawler"
-  :title: "Flurry"
+  :title: "Pummel"
   :type: "Action"
   :icon: "punch-blast"
   :border_color: "#9c2317"
-  :line1: "<b>Attack 2</b>"
-  :line2: "<b>Mill</b> up to 3 cards to gain"
-  :line3: "<b>+1 Power</b> per card."
-  :line4: "<b>Combo</b>: <i>Finisher</i>"
-  :line5: "<b>+2 Power</b>"
+  :line1: "<b>Attack 3</b> then you may"
+  :line2: "<b>Mill 2</b> to <b>Attack 3</b> again."
+  :line3: "(you may choose a new target)"
+  :line4: "<b>Combo</b>: <i>Clobber</i>"
+  :line5: "<b>+1 Power</b> to both attacks."
   :line6: "<b>Refresh</b> your <i>Brawler</i> deck."
 -
   :deck: "Brawler"
@@ -342,11 +342,11 @@
   :icon: "thrust-bend"
   :border_color: "#9c2317"
   :line1: "Play when you are attacked."
-  :line2: "<b>Attack 2</b> (target your attacker)"
+  :line2: "<b>Attack 3</b> (target your attacker)"
   :line3: "<b>Draw 1</b>"
-  :line4: "You may play another <i>Reaction</i>"
-  :line5: "in response to this attack."
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Bob/Weave</i>"
+  :line5: "<b>Block 2</b>"
+  :line6: "<b>+2 Power</b>"
 
 # Shadow - BLACK
 -
@@ -357,10 +357,10 @@
   :border_color: "#666"
   :line1: "<b>Attack 3</b>"
   :line2: "<b>Draw 1</b>"
-  :line3: "If this attack defeats an enemy,"
-  :line4: "<b>Charge</b> the enemy card."
-  :line5: "<b>Combo</b>: <i>Syphon</i>"
-  :line6: "<b>Restore Self 3</b>"
+  :line3: "<b>Restore Self 1</b>"
+  :line4: "<b>Combo</b>: <i>Syphon</i>"
+  :line5: "Your target suffers 2 damage."
+  :line6: "<b>Restore 2</b>"
 -
   :deck: "Shadow"
   :title: "Misdirect"
@@ -368,11 +368,11 @@
   :icon: "avoidance"
   :border_color: "#666"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 2</b>"
-  :line3: "<b>Attack 2</b>"
-  :line4: "(target a different enemy)"
-  :line5: "<b>Combo</b>: <i>Shuffle</i>"
-  :line6: "ALL players may swap places."
+  :line2: "<b>Block 2</b> then <b>Attack 2</b>"
+  :line3: "(target a different enemy)"
+  :line4: "<b>Combo</b>: <i>Shuffle</i>"
+  :line5: "ALL players may swap places"
+  :line6: "and/or perform <b>Restore Self 1</b>."
 -
   :deck" : "Shadow"
   :title: "Mimic"
@@ -393,11 +393,11 @@
   :type: "Action"
   :icon: "magic-swirl"
   :border_color: "#2e65b3"
-  :line1: "<b>Attack 2</b>"
-  :line2: "<b>Charge</b> this card."
-  :line3: "<b>+1 Power</b>"
+  :line1: "<b>Attack 2</b>, <b>+1 Power</b> for each"
+  :line2: "artifact you control."
+  :line3: "<b>Charge</b> this card."
   :line4: "<b>Combo</b>: <i>Accelerate</i>"
-  :line5: "<b>Draw 2</b> then <b>Charge</b> a"
+  :line5: "<b>Draw 3</b> then <b>Charge</b> a"
   :line6: "card from your hand."
 -
   :deck: "Artificer"
@@ -406,18 +406,18 @@
   :icon: "steampunk-goggles"
   :border_color: "#2e65b3"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 1</b>"
+  :line2: "<b>Block 2</b>"
   :line3: "<b>Charge</b> this card."
   :line4: "<b>Combo</b>: <i>Adapt</i>"
-  :line5: "<b>+2 Block</b>"
-  :line6: "<b>Draw 1</b>"
+  :line5: "<b>+1 Block</b> and your attacker"
+  :line6: "suffers 3 damage."
 -
   :deck: "Artificer"
   :title: "Tinker"
   :type: "Action"
   :icon: "anvil-impact"
   :border_color: "#2e65b3"
-  :line1: "<b>Scry 3</b>"
+  :line1: "<b>Scry 3</b>, <b>Draw 1</b>, and"
   :line2: "<b>Restore Self 1</b>"
   :line3: "You may swap your artifact"
   :line4: "for an unused one."
@@ -433,7 +433,7 @@
   :border_color: "#492"
   :line1: "The next attack on target"
   :line2: "enemy gains <b>+4 Power</b>."
-  :line3: "<b>Combo</b>: <i>Disseminate</i>"
+  :line3: "<b>Combo</b>: <i>Corrode</i>"
   :line4: "If the target is not <i>Elite</i>,"
   :line5: "ignore its card text until"
   :line6: "the end of next round."
@@ -446,9 +446,9 @@
   :line1: "<b>Restore 3</b>"
   :line2: "The target must <b>Discard 1</b>."
   :line3: "<b>Restore Self 1</b>"
-  :line4: "<b>Combo</b>: <i>Regenerate</i>"
-  :line5: "Target ally may <b>Draw 2</b>."
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Infuse</i>"
+  :line5: "Target ally may suffer 1 damage"
+  :line6: "to <b>Draw 3</b>."
 -
   :deck: "Apothecary"
   :title: "Mix"
@@ -456,7 +456,7 @@
   :icon: "pestle-mortar"
   :border_color: "#492"
   :line1: "Give an ally a card from"
-  :line2: "your hand, then"
+  :line2: "your hand then"
   :line3: "<b>Draw 2</b> <i>from their decks</i>."
   :line4: "You may take another <b>Action</b>."
   :line5: "<i>once per round</i>"
@@ -470,19 +470,19 @@
   :deck: "The Beast"
   :title: "Slash"
   :type: "Action"
-  :icon: "triple-claws"
+  :image: "swipe"
   :border_color: "#9c2317"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target does NOT have"
   :line3: "<b>Block</b>, gain <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Rampage</i>"
-  :line5: "<b>Attack All 2</b>"
-  :line6: ""
+  :line5: "<b>Attack All 2</b>, <b>Restore Self 1</b>"
+  :line6: "for each enemy hit."
 -
   :deck: "The Beast"
   :title: "Sniff"
   :type: "Action"
-  :icon: "snout"
+  :image: "sniff"
   :border_color: "#9c2317"
   :line1: "<b>Scry 2</b>"
   :line2: "<b>Draw 1</b>"
@@ -497,11 +497,11 @@
   :icon: "spiky-wing"
   :border_color: "#9c2317"
   :line1: "Play when you are attacked."
-  :line2: "You may immediately play"
-  :line3: "an <b>Action</b> from your hand."
-  :line4: "If you do, <b>Block 1</b>"
-  :line5: "<b>Combo</b>: <i>Maneuver</i>"
-  :line6: "<b>+2 Block</b> and <b>Draw 1</b>"
+  :line2: "<b>Block 1</b> then <b>Draw 1</b>"
+  :line3: "You may immediately play"
+  :line4: "an <b>Action</b> from your hand."
+  :line5: "<b>Combo</b>: <i>Fly</i>"
+  :line6: "<b>+5 Block</b>"
 
 # # TODO - BLACK
 # -
@@ -544,47 +544,47 @@
 # Elementalist - BLUE
 -
   :deck: "Elementalist"
-  :title: "Fire"
+  :title: "Burn"
   :type: "Action"
-  :icon: "flamer"
+  :image: "fire"
   :border_color: "#2e65b3"
   :line1: "<b>Attack 3</b>"
   :line2: "The next attack on this enemy"
   :line3: "this round gains <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Flare</i>"
-  :line5: "<b>+2 Power</b>"
+  :line5: "<b>+3 Power</b>"
   :line6: "<b>Draw 1</b>"
 -
   :deck: "Elementalist"
   :title: "Frost"
   :type: "Reaction"
-  :icon: "beveled-star"
+  :image: "frost"
   :border_color: "#2e65b3"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 1</b>"
-  :line3: "Your attacker suffers 2 damage."
-  :line4: "<b>Combo</b>: <i>Freeze</i>"
-  :line5: "Prevent ALL damage from"
-  :line6: "your attacker this round."
+  :line2: "<b>Block 2</b>"
+  :line3: "Your attacker loses <b>Hunter</b>"
+  :line4: "next round (if applicable)."
+  :line5: "<b>Combo</b>: <i>Freeze</i>"
+  :line6: "Prevent the attack."
 -
   :deck: "Elementalist"
   :title: "Shock"
   :type: "Action"
-  :icon: "electric"
+  :image: "shock"
   :border_color: "#2e65b3"
-  :line1: "<b>Attack All 1</b>"
-  :line2: "Spend 1-3 charges to gain"
-  :line3: "<b>+1 Power</b> per charge."
-  :line4: "<b>Combo</b>: <i>Conduct</i>"
-  :line5: "<b>Charge</b> this card and"
-  :line6: "the card you played it with."
+  :line1: "Target enemy suffers 2 damage."
+  :line2: "<b>Draw 2</b>"
+  :line3: "<b>Combo</b>: <i>Arc</i>"
+  :line4: "Another target enemy suffers 2"
+  :line5: "damage and target ally may"
+  :line6: "<b>Draw 2</b>."
 
 # Swarmkeeper - GREEN
 -
   :deck: "Swarmkeeper"
   :title: "Wasp / Sting"
   :type: "Action"
-  :icon: "wasp-sting"
+  :image: "wasp"
   :border_color: "#492"
   :line1: "<b>Attack 3</b>"
   :line2: "Gain <b>+1 Power</b> for each"
@@ -596,9 +596,9 @@
   :deck: "Swarmkeeper"
   :title: "Mosquito / Bite"
   :type: "Action"
-  :icon: "cigale"
+  :image: "mosquito"
   :border_color: "#492"
-  :line1: "<b>Attack 2</b>"
+  :line1: "Target enemy suffers 2 damage."
   :line2: "<b>Restore Self 2</b>"
   :line3: ""
   :line4: "<b>Combo</b>: <i>Transfuse</i>"
@@ -608,10 +608,10 @@
   :deck: "Swarmkeeper"
   :title: "Spider / Web"
   :type: "Reaction"
-  :icon: "spider-alt"
+  :image: "spider"
   :border_color: "#492"
   :line1: "Play when an enemy attacks."
-  :line2: "<b>Block 1</b>"
+  :line2: "<b>Block 2</b>"
   :line3: "Anyone may become the target"
   :line4: "of the attack."
   :line5: "<b>Combo</b>: <i>Wrap</i>"
